--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,10 +5,13 @@ set( LIB_SOURCES
 	sphere_kn.c
 	sphere_wavefunc.c
 	hydrogen.c
+	hartree_potential.c
 	utils.c
 	abs_pot.c
+	grid.c
 	fields.c
 	calc.c
+	sphere_harmonics.c
 	)
 
 set( LIB_HEADERS
@@ -16,15 +19,17 @@ set( LIB_HEADERS
     jrcd.h
     kn.h
     prog.h
-    sphere_grid.h
+    grid.h
     sphere_kn.h
     sphere_wavefunc.h
+	hartree_potential.h
     types.h
     units.h
     utils.h
 	abs_pot.h
 	fields.h
 	calc.h
+	sphere_harmonics.h
    )
 
 set( MAIN main.c )
@@ -32,5 +37,5 @@ set( MAIN main.c )
 add_library( tdse SHARED ${LIB_SOURCES} ${LIB_HEADERS} )
 add_executable( main ${MAIN} )
 
-target_link_libraries( tdse m )
-target_link_libraries( main tdse m )
+target_link_libraries( tdse m gsl gslcblas )
+target_link_libraries( main tdse m gsl gslcblas )
