Start write common class for atoms, add neon, test ux_lda

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ include_directories(${PROJECT_SOURCE_DIR}/src)
 find_package(OpenMP)
 if (OPENMP_FOUND)
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+	add_definitions(-DWITH_OMP)
 endif()
 
 find_package(GSL)
