Add atom struct, move dt from workspace

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ project(tdse C)
 
 cmake_minimum_required(VERSION 2.8)
 
-set(CMAKE_BUILD_TYPE Release)
+set(CMAKE_BUILD_TYPE Debug)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS "ON")
 
@@ -13,6 +13,8 @@ if (OPENMP_FOUND)
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
 	add_definitions(-DWITH_OMP)
 endif()
+
+set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
 
 find_package(GSL)
 
