--- a/wrapper/workspace.pyx.in
+++ b/wrapper/workspace.pyx.in
@@ -5,7 +5,7 @@ from atom cimport AtomCache
 from grid cimport ShGrid, SpGrid, ShNeGrid
 from wavefunc cimport ShWavefunc, CtWavefunc, ShNeWavefunc
 from field cimport Field
-from orbitals cimport Orbitals
+from orbitals cimport ShOrbitals, ShNeOrbitals
 from sphere_harmonics cimport YlmCache
 from hartree_potential cimport Uxc
 from hartree_potential import UXC_LB
@@ -71,15 +71,16 @@ cdef class SFAWorkspace:
     def prop(self, CtWavefunc wf, Field field, double t, double dt):
         self.cdata.propagate(wf.cdata[0], field.cdata, t, dt)
 
-cdef class SKnWorkspace:
-    def __cinit__(self, AtomCache atom_cache, ShGrid grid, UabsCache uabs, int num_threads = -1, int propType=4):
+{{for prefix in ["Sh", "ShNe"]}}
+cdef class {{prefix}}WavefuncWS:
+    def __cinit__(self, AtomCache atom_cache, {{prefix}}Grid grid, UabsCache uabs, int num_threads = -1, int propType=4):
         cdef PropAtType propAtType
         if propType == 4:
             propAtType = Odr4
         else:
             propAtType = Odr3
 
-        self.cdata = new WfBase(grid.data[0], atom_cache.cdata[0], uabs.cdata[0], propAtType, num_threads)
+        self.cdata = new WavefuncWS[c{{prefix}}Grid](grid.data[0], atom_cache.cdata[0], uabs.cdata[0], propAtType, num_threads)
 
         self.uabs = uabs
         self.atom_cache = atom_cache
@@ -87,51 +88,24 @@ cdef class SKnWorkspace:
     def __dealloc__(self):
         del self.cdata
 
-    def __init__(self, AtomCache atom_cache, ShGrid grid, UabsCache uabs, int num_threads = -1, int propType=4):
+    def __init__(self, AtomCache atom_cache, {{prefix}}Grid grid, UabsCache uabs, int num_threads = -1, int propType=4):
         pass
 
-    def prop(self, ShWavefunc wf, Field field, double t, double dt):
+    def prop(self, {{prefix}}Wavefunc wf, Field field, double t, double dt):
         self.cdata.prop(wf.cdata[0], field.cdata, t, dt)
 
-    def prop_abs(self, ShWavefunc wf, double dt):
+    def prop_abs(self, {{prefix}}Wavefunc wf, double dt):
         self.cdata.prop_abs(wf.cdata[0], dt)
 
-    def prop_without_field(self, ShWavefunc wf, double dt):
+    def prop_without_field(self, {{prefix}}Wavefunc wf, double dt):
         self.cdata.prop_without_field(wf.cdata[0], dt)
 
-    def prop_img(self, ShWavefunc wf, double dt):
+    def prop_img(self, {{prefix}}Wavefunc wf, double dt):
         self.cdata.prop_img(wf.cdata[0], dt)
+{{endfor}}
 
-
-cdef class SKnNeWorkspace:
-    def __cinit__(self, AtomNeCache atom_cache, ShNeGrid grid, UabsNeCache uabs, int num_threads = -1, int propType=4):
-        cdef PropAtType propAtType
-        if propType == 4:
-            propAtType = Odr4
-        else:
-            propAtType = Odr3
-
-        self.cdata = new WfNeBase(grid.data[0], atom_cache.cdata[0], uabs.cdata[0], propAtType, num_threads)
-        self.uabs = uabs
-        self.atom_cache = atom_cache
-
-    def __dealloc__(self):
-        del self.cdata
-
-    def __init__(self, AtomNeCache atom_cache, ShNeGrid grid, UabsNeCache uabs, int num_threads = -1, int propType=4):
-        pass
-
-    def prop(self, ShNeWavefunc wf, Field field, double t, double dt):
-        self.cdata.prop(wf.cdata[0], field.cdata, t, dt)
-
-    def prop_abs(self, ShNeWavefunc wf, double dt):
-        self.cdata.prop_abs(wf.cdata[0], dt)
-
-    def prop_without_field(self, ShNeWavefunc wf, double dt):
-        self.cdata.prop_without_field(wf.cdata[0], dt)
-
-    def prop_img(self, ShNeWavefunc wf, double dt):
-        self.cdata.prop_img(wf.cdata[0], dt)
+SKnWorkspace = ShWavefuncWS
+SNeKnWorkspace = ShWavefuncWS
 
 
 cdef class SKnAWorkspace:
@@ -208,12 +182,13 @@ cdef class SKnWithSourceWorkspace:
         return self.cdata.abs_norm
 
 
-cdef class SOrbsWorkspace:
-    def __cinit__(self, AtomCache atom_cache, ShGrid sh_grid, SpGrid sp_grid, UabsCache uabs, YlmCache ylm_cache, int Uxc_lmax = 3, int Uh_lmax = 3, Uxc uxc = UXC_LB, int num_threads=-1):
+{{for prefix in ["Sh", "ShNe"]}}
+cdef class {{prefix}}OrbitalsWS:
+    def __cinit__(self, AtomCache atom_cache, {{prefix}}Grid sh_grid, SpGrid sp_grid, UabsCache uabs, YlmCache ylm_cache, int Uxc_lmax = 3, int Uh_lmax = 3, Uxc uxc = UXC_LB, int num_threads=-1):
         assert(Uxc_lmax >= 0 and Uxc_lmax <= 3)
         assert(Uh_lmax >= 0 and Uh_lmax <= 3)
 
-        self.cdata = new orbs(sh_grid.data[0], sp_grid.data[0],
+        self.cdata = new OrbitalsWS[c{{prefix}}Grid](sh_grid.data[0], sp_grid.data[0],
                               atom_cache.cdata[0], uabs.cdata[0],
                               ylm_cache.cdata[0], Uh_lmax, Uxc_lmax,
                               uxc.cdata, Odr4, num_threads)
@@ -223,22 +198,22 @@ cdef class SOrbsWorkspace:
     def __dealloc__(self):
         del self.cdata
 
-    def __init__(self, AtomCache atom_cache, ShGrid sh_grid, SpGrid sp_grid, UabsCache uabs, YlmCache ylm_cache, int Uxc_lmax = 3, int Uh_lmax = 3, Uxc uxc = UXC_LB, int num_threads=-1):
+    def __init__(self, AtomCache atom_cache, {{prefix}}Grid sh_grid, SpGrid sp_grid, UabsCache uabs, YlmCache ylm_cache, int Uxc_lmax = 3, int Uh_lmax = 3, Uxc uxc = UXC_LB, int num_threads=-1):
         pass
 
-    def set_time_approx_uee_two_point(self, Orbitals orbs):
+    def set_time_approx_uee_two_point(self, {{prefix}}Orbitals orbs):
         self.cdata.setTimeApproxUeeTwoPointFor(orbs.cdata[0])
 
-    def prop_img(self, Orbitals orbs, double dt):
+    def prop_img(self, {{prefix}}Orbitals orbs, double dt):
         self.cdata.prop_img(orbs.cdata[0], dt)
 
-    def prop_ha(self, Orbitals orbs, double dt):
+    def prop_ha(self, {{prefix}}Orbitals orbs, double dt):
         self.cdata.prop_ha(orbs.cdata[0], dt)
 
-    def prop(self, Orbitals orbs, Field field, double t, double dt, bint calc_uee=True):
+    def prop(self, {{prefix}}Orbitals orbs, Field field, double t, double dt, bint calc_uee=True):
         self.cdata.prop(orbs.cdata[0], field.cdata, t, dt, calc_uee)
 
-    def calc_uee(self, Orbitals orbs, Uxc_lmax=None, Uh_lmax=None):
+    def calc_uee(self, {{prefix}}Orbitals orbs, Uxc_lmax=None, Uh_lmax=None):
         if Uxc_lmax is None:
             Uxc_lmax = self.cdata.Uxc_lmax
 
@@ -256,3 +231,4 @@ cdef class SOrbsWorkspace:
     def n_sp(self):
         cdef double[:,::1] res = <double[:self.cdata.sp_grid.n[1],:self.cdata.sp_grid.n[0]]>self.cdata.n_sp
         return np.asarray(res)
+{{endfor}}
