--- a/wrapper/wavefunc.pyx.in
+++ b/wrapper/wavefunc.pyx.in
@@ -11,7 +11,7 @@ from abs_pot cimport mask_core
 from grid cimport ShGrid, SpGrid, ShNeGrid
 from sphere_harmonics cimport YlmCache
 
-from masks cimport CoreMask
+from masks cimport ShCoreMask, ShNeCoreMask
 
 from libc.stdlib cimport malloc, free
 
@@ -68,7 +68,7 @@ cdef class {{Prefix}}Wavefunc:
 
         return n
 
-    def norm(self, CoreMask mask = None):
+    def norm(self, {{Prefix}}CoreMask mask = None):
         if mask is None:
             return self.cdata.norm()
         else:
@@ -81,7 +81,7 @@ cdef class {{Prefix}}Wavefunc:
     def normalize(self):
         self.cdata.normalize()
 
-    def z(self, CoreMask mask=None):
+    def z(self, {{Prefix}}CoreMask mask=None):
         if mask is None:
             return self.cdata.z()
         else:
