--- a/wrapper/grid.pyx.in
+++ b/wrapper/grid.pyx.in
@@ -81,11 +81,13 @@ cdef class ShGrid:
     def r(self):
         return np.linspace(self.data.d[0], self.data.d[0]*self.data.n[0], self.data.n[0])
 
-cdef class ShNeGrid:
+
+{{for Grid in ["ShNeGrid", "ShNeGrid3D"]}}
+cdef class {{Grid}}:
     def __cinit__(self, double Rmin, double Rmax, double Ra, double dr_max, int Nl):
         self.Rmin = Rmin
         self.Ra = Ra
-        self.data = new cShNeGrid(Rmin, Rmax, Ra, dr_max, Nl)
+        self.data = new c{{Grid}}(Rmin, Rmax, Ra, dr_max, Nl)
 
     def __init__(self, double Rmin, double Rmax, double Ra, double dr_max, int Nl):
         pass
@@ -94,10 +96,10 @@ cdef class ShNeGrid:
         del self.data
 
     def _repr_latex_(self):
-        return "ShNeGrid: $N_r = {}$, $N_l = {}$, $dr = {}$ (a.u.)".format(self.data.n[0], self.data.n[1], self.data.d[0])
+        return "{{Grid}}: $N_r = {}$, $N_l = {}$, $dr = {}$ (a.u.)".format(self.data.n[0], self.data.n[1], self.data.d[0])
 
     def createGridWith(self, Nl):
-        return ShNeGrid(self.Rmin, self.Rmax, self.Ra, self.dr, Nl)
+        return {{Grid}}(self.Rmin, self.Rmax, self.Ra, self.dr, Nl)
 
     @property
     def shape(self):
@@ -128,53 +130,7 @@ cdef class ShNeGrid:
             res[i] = self.data.r(i)
 
         return res
-cdef class ShNeGrid3D:
-    def __cinit__(self, double Rmin, double Rmax, double Ra, double dr_max, int Nl):
-        self.Rmin = Rmin
-        self.Ra = Ra
-        self.data = new cShNeGrid3D(Rmin, Rmax, Ra, dr_max, Nl)
-
-    def __init__(self, double Rmin, double Rmax, double Ra, double dr_max, int Nl):
-        pass
-
-    def __dealloc__(self):
-        del self.data
-
-    def _repr_latex_(self):
-        return "ShNeGrid3D: $N_r = {}$, $N_l = {}$, $dr = {}$ (a.u.)".format(self.data.n[0], self.data.n[1], self.data.d[0])
-
-    def createGridWith(self, Nl):
-        return ShNeGrid3D(self.Rmin, self.Rmax, self.Ra, self.dr, Nl)
-
-    @property
-    def shape(self):
-        return (self.data.n[1], self.data.n[0])
-
-    @property
-    def Nl(self):
-        return self.data.n[1]
-
-    @property
-    def Nr(self):
-        return self.data.n[0]
-
-    @property
-    def Rmax(self):
-        return self.data.Rmax()
-
-    @property
-    def dr(self):
-        return self.data.d[0]
-
-    @property
-    def r(self):
-        cdef int i
-        cdef np.ndarray[np.double_t, ndim=1] res = np.zeros(self.data.n[0])
-
-        for i in range(self.data.n[0]):
-            res[i] = self.data.r(i)
-
-        return res
+{{endfor}}
 
 cdef class SpGrid:
     def __cinit__(self, int Nr, int Nc, int Np, double r_max):
