--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ include(ExternalProject)
 
 cmake_minimum_required(VERSION 2.8)
 
-set(CMAKE_BUILD_TYPE Debug)
+set(CMAKE_BUILD_TYPE Release)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS "ON")
 set(CMAKE_CXX_STANDARD 14)
@@ -22,6 +22,7 @@ if (MPI_FOUND)
 	include_directories(${MPI_C_INCLUDE_PATH})
 	add_definitions(-D_MPI)
 endif()
+add_definitions(-D_MPI)
 
 ExternalProject_Add(CUB
 	GIT_REPOSITORY https://github.com/NVlabs/cub.git
